--- a/index.ipynb
+++ b/index.ipynb
@@ -32,26 +32,63 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Business Understanding"
+    "### Business Understanding\n",
+    "Microsoft lacks experience in the film industry and wants to establish a movie studio.\n",
+    "In order to determine which movies the corporation should invest in most strategically, I have been entrusted with looking over box office data.\n",
+    "\n",
+    "To help me reach my goal, I made the decision to divide the primary target into smaller, more focused goals, like these:\n",
+    "\n",
+    "1.To determine the demographic we want to target in order to create material that will appeal to them and help Microsoft achieve box office success.\n",
+    "\n",
+    "2.To ascertain the method of distribution to be employed for seeing the films—in theaters or on streaming services—so that the business can capitalize on it.\n",
+    "\n",
+    "3.Using the data analysis, to determine which movie genres are the most strategically important to generate.\n",
+    "\n",
+    "4.To identify the highest grossing movies in which the business can make investments by examining the production costs in order to optimize profits.\n"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#Data Understanding"
+    "#### Data Understanding\n",
+    "\n",
+    "Three different files will serve as the data sources for this research.\n",
+    "\n",
+    "1.im.db\n",
+    "\n",
+    "*Source*-This data set comes from [IMDB](https://www.imdb.com/) a public and free movie database\n",
+    "\n",
+    "*Content*-This set of data contains pertinent statistics, like movie ratings and movie fundamentals, that we will use to analyze our issue.\n",
+    "\n",
+    "*Format*-The format for this data set is SQL\n",
+    "\n",
+    "2.tmdb.movies.csv \n",
+    "\n",
+    "*Source*This data set comes from [TMDB](https://www.themoviedb.org/).It is a community-built library of films and television shows with an emphasis on global communities and a vast amount of data.\n",
+    "\n",
+    "*Content*We will use vote count, popularity, and genre IDs in this set of important variables for our study\n",
+    "*Format*-This data is in csv file format\n",
+    "\n",
+    "\n",
+    "3.tn.movies_budgets.csv\n",
+    "\n",
+    "*Source*This data set comes from [TheNumbers](https://www.the-numbers.com/) This is a website that offers past box office information for motion pictures.\n",
+    "\n",
+    "*Content*he set's data is arranged according to a number of criteria, such as budget, genre, release date, and domestic/international gross. These numbers immediately answer our inquiries concerning the highest-grossing movies.\n",
+    "*Format*-The format of this data set is a CSV file"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "##Load the Dataset with Pandas"
+    "##### Load the Dataset with Pandas"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -67,7 +104,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -77,7 +114,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -89,7 +126,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -105,7 +142,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -114,7 +151,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -187,7 +224,7 @@
        "4         Chopsticks    Comedy,Drama            6.5"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -199,17 +236,243 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>id</th>\n",
+       "      <th>release_date</th>\n",
+       "      <th>movie</th>\n",
+       "      <th>production_budget</th>\n",
+       "      <th>domestic_gross</th>\n",
+       "      <th>worldwide_gross</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>1</td>\n",
+       "      <td>Dec 18, 2009</td>\n",
+       "      <td>Avatar</td>\n",
+       "      <td>$425,000,000</td>\n",
+       "      <td>$760,507,625</td>\n",
+       "      <td>$2,776,345,279</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>2</td>\n",
+       "      <td>May 20, 2011</td>\n",
+       "      <td>Pirates of the Caribbean: On Stranger Tides</td>\n",
+       "      <td>$410,600,000</td>\n",
+       "      <td>$241,063,875</td>\n",
+       "      <td>$1,045,663,875</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>3</td>\n",
+       "      <td>Jun 7, 2019</td>\n",
+       "      <td>Dark Phoenix</td>\n",
+       "      <td>$350,000,000</td>\n",
+       "      <td>$42,762,350</td>\n",
+       "      <td>$149,762,350</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>4</td>\n",
+       "      <td>May 1, 2015</td>\n",
+       "      <td>Avengers: Age of Ultron</td>\n",
+       "      <td>$330,600,000</td>\n",
+       "      <td>$459,005,868</td>\n",
+       "      <td>$1,403,013,963</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>5</td>\n",
+       "      <td>Dec 15, 2017</td>\n",
+       "      <td>Star Wars Ep. VIII: The Last Jedi</td>\n",
+       "      <td>$317,000,000</td>\n",
+       "      <td>$620,181,382</td>\n",
+       "      <td>$1,316,721,747</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   id  release_date                                        movie  \\\n",
+       "0   1  Dec 18, 2009                                       Avatar   \n",
+       "1   2  May 20, 2011  Pirates of the Caribbean: On Stranger Tides   \n",
+       "2   3   Jun 7, 2019                                 Dark Phoenix   \n",
+       "3   4   May 1, 2015                      Avengers: Age of Ultron   \n",
+       "4   5  Dec 15, 2017            Star Wars Ep. VIII: The Last Jedi   \n",
+       "\n",
+       "  production_budget domestic_gross worldwide_gross  \n",
+       "0      $425,000,000   $760,507,625  $2,776,345,279  \n",
+       "1      $410,600,000   $241,063,875  $1,045,663,875  \n",
+       "2      $350,000,000    $42,762,350    $149,762,350  \n",
+       "3      $330,600,000   $459,005,868  $1,403,013,963  \n",
+       "4      $317,000,000   $620,181,382  $1,316,721,747  "
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "the_numbers.head()"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>id</th>\n",
+       "      <th>release_date</th>\n",
+       "      <th>movie</th>\n",
+       "      <th>production_budget</th>\n",
+       "      <th>domestic_gross</th>\n",
+       "      <th>worldwide_gross</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>1</td>\n",
+       "      <td>Dec 18, 2009</td>\n",
+       "      <td>Avatar</td>\n",
+       "      <td>425000000</td>\n",
+       "      <td>760507625</td>\n",
+       "      <td>2776345279</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>2</td>\n",
+       "      <td>May 20, 2011</td>\n",
+       "      <td>Pirates of the Caribbean: On Stranger Tides</td>\n",
+       "      <td>410600000</td>\n",
+       "      <td>241063875</td>\n",
+       "      <td>1045663875</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>3</td>\n",
+       "      <td>Jun 7, 2019</td>\n",
+       "      <td>Dark Phoenix</td>\n",
+       "      <td>350000000</td>\n",
+       "      <td>42762350</td>\n",
+       "      <td>149762350</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>4</td>\n",
+       "      <td>May 1, 2015</td>\n",
+       "      <td>Avengers: Age of Ultron</td>\n",
+       "      <td>330600000</td>\n",
+       "      <td>459005868</td>\n",
+       "      <td>1403013963</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>5</td>\n",
+       "      <td>Dec 15, 2017</td>\n",
+       "      <td>Star Wars Ep. VIII: The Last Jedi</td>\n",
+       "      <td>317000000</td>\n",
+       "      <td>620181382</td>\n",
+       "      <td>1316721747</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   id  release_date                                        movie  \\\n",
+       "0   1  Dec 18, 2009                                       Avatar   \n",
+       "1   2  May 20, 2011  Pirates of the Caribbean: On Stranger Tides   \n",
+       "2   3   Jun 7, 2019                                 Dark Phoenix   \n",
+       "3   4   May 1, 2015                      Avengers: Age of Ultron   \n",
+       "4   5  Dec 15, 2017            Star Wars Ep. VIII: The Last Jedi   \n",
+       "\n",
+       "   production_budget  domestic_gross  worldwide_gross  \n",
+       "0          425000000       760507625       2776345279  \n",
+       "1          410600000       241063875       1045663875  \n",
+       "2          350000000        42762350        149762350  \n",
+       "3          330600000       459005868       1403013963  \n",
+       "4          317000000       620181382       1316721747  "
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Assuming the column containing dollar amounts\n",
+    "def remove_dollar_sign(x):\n",
+    "  return (x.strip('$'))  # Remove dollar sign and convert \n",
+    "\n",
+    "the_numbers['production_budget']\\\n",
+    "    = the_numbers['production_budget'].apply(remove_dollar_sign)\n",
+    "the_numbers['domestic_gross']\\\n",
+    "    = the_numbers['domestic_gross'].apply(remove_dollar_sign)\n",
+    "the_numbers['worldwide_gross']\\\n",
+    "    = the_numbers['worldwide_gross'].apply(remove_dollar_sign)\n",
+    "# Assuming the column containing commas\n",
+    "def remove_commas_to_int(x):\n",
+    "  return int(x.replace(',', ''))  \n",
+    "# Replace comma with empty string and convert to int\n",
+    "the_numbers['production_budget']\\\n",
+    "    = the_numbers['production_budget'].apply(remove_commas_to_int)\n",
+    "the_numbers['domestic_gross']\\\n",
+    "    = the_numbers['domestic_gross'].apply(remove_commas_to_int)\n",
+    "the_numbers['worldwide_gross']\\\n",
+    "    = the_numbers['worldwide_gross'].apply(remove_commas_to_int)\n",
+    "\n",
+    "# Show the first few rows\n",
+    "the_numbers.head()"
+   ]
   },
   {
    "cell_type": "code",
