--- a/Student.ipynb
+++ b/Student.ipynb
@@ -32,9 +32,20 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "## Task\n",
+    "Microsoft wants to get in on the excitement after noticing that all the major corporations are producing original video content. They don't know anything about making movies, yet they have decided to start a new studio. It is your responsibility to research the kinds of movies that are currently doing the best at the box office. The next step is to convert those results into practical advice that the president of Microsoft's new film company may use to choose the kind of movies that should be made.\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "## Business Understanding\n",
     "Microsoft lacks experience in the film industry and wants to establish a movie studio.\n",
     "In order to determine which movies the corporation should invest in most strategically, I have been entrusted with looking over box office data.\n",
+    "\n",
+    "\n",
+    "# Objectives\n",
     "\n",
     "To help me reach my goal, I made the decision to divide the primary target into smaller, more focused goals, like these:\n",
     "\n",
