--- a/Student.ipynb
+++ b/Student.ipynb
@@ -2191,7 +2191,7 @@
    ],
    "source": [
     "# Create a scatter plot to visualize the correlation between popularity and \n",
-    "# popularity\n",
+    "# profits\n",
     "plt.figure(figsize=(12, 8))\n",
     "plt.scatter(correlation_['popularity'], correlation_['gross_profit'], alpha=0.8)\n",
     "plt.title(f'Scatter Plot of gross_profit vs popularity\\nCorrelation: {correlation:.5f}')\n",
